# tp

./: .gitignore  CHANGELOG.md  Makefile  README.md  instalator.ps1  pyproject.toml  sonar-project.properties
.github/: .releaserc
.github/workflows/: pr-checks.yaml  release.yaml
test/: conftest.py  test_app.py  test_config.py  test_printer.py  test_template_manager.py  test_utils.py  test_web_app.py
tp/: README.md  __main__.py  app.py  commands.py  config.py  gui.py  main.py  printer.py  utils.py  web_app.py
tp/templates/: base.html  index.html  small_note.html  task.html  ticket.html
