[tool.poetry]
name = "tp"
version = "0.1.1.1"
description = ""
authors = ["Mikołaj Kaczmarek <mikolaj.s.kaczmarek@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
thermalprinter = "^0.2.0"
escpos = "^2.0.0"
textual = "^0.14.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.2.0"

[tool.ruff]
line-length = 120
output-format = "full"
exclude = [".git", "venv", "node_modules"]

[tool.pytest]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [".git", ".env", "venv"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
ignore_missing_imports = true

[tool.poetry.scripts]
tp = "tp.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
