[tool.poetry]
name = "tp"
version = "1.0.0"
description = ""
authors = ["Mikołaj Kaczmarek <mikolaj.s.kaczmarek@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
thermalprinter = "^0.2.0"
escpos = "^2.0.0"
typer = "^0.12.5"
pyqt6 = "^6.7.1"
flask = "^3.0.3"
mistune = "^3.0.2"
unidecode = "^1.3.8"
waitress = "^3.0.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.2.0"
types-pyyaml = "^6.0.12.20240917"
types-waitress = "^3.0.1.20241030"


[tool.ruff]
line-length = 120
output-format = "full"

exclude = [
    # Commonly ignored dirs
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "SIM",
    "T201",
    "UP",
]
ignore = ["E501", "B008"]
unfixable = ["B"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false


[tool.pytest]
python_file = "tests.py test_*.py *_tests.py"
norecursedirs = ".git .env venv"


[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = "abstract"



[tool.bandit]
exclude_dirs = ['test/*']


[tool.coverage.paths]
source = ["tp/"]

[tool.coverage.run]
source = ["tp/"]
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true

[tool.poetry.scripts]
tp = "tp.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
